--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 format: grid
-banner: /assets/images/header.jpg
+banner: /assets/img/header.jpg
 ---
 
 {% if paginator and paginator.page == 1 %}
